Fixed Alignment Issues in SVG-Creator

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@
 
 .content{
     margin-top: 7.5em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
 }
 
 .truth_table_input{
